--- a/scss/_header-footer.scss
+++ b/scss/_header-footer.scss
@@ -25,8 +25,7 @@ header {
       justify-content: space-between;
 
       .nav-list {
-        max-width: 609px;
-        width: 100%;
+        width: 609px;
         display: flex;
         justify-content: space-between;
         align-items: center;
